--- a/js/assets/css/slider.css
+++ b/js/assets/css/slider.css
@@ -4,7 +4,7 @@ input[type=range] {
   margin: 10px 0;
   width: 100%;
   background-color: #FFFFFF00;
-  max-width: 50%;
+  padding: 0px 25%;
 }
 input[type=range]:focus {
   outline: none;
