--- a/web/views/home.html
+++ b/web/views/home.html
@@ -45,11 +45,11 @@
         
             <section id="mood-selection">
               <div class="mb10">Escolha o humor do seu zap:</div>
-              <button class="mood-button grow active">
+              <button class="mood-button grow active" data-mood="happy">
                   <img class="emoji" src="images/emojis/happy.png" alt="happy"/><br/>
                   Feliz
               </button>
-              <button class="mood-button grow">
+              <button class="mood-button grow" data-mood="angry">
                   <img class="emoji" src="images/emojis/angry.png" alt="angry"/><br/>
                   Bravo
               </button>
@@ -74,7 +74,7 @@
             </section>
         
             <section class="mt20">
-              <textarea id="text-box" rows="10">Cole seu texto para zapear aqui...</textarea>
+              <textarea id="text-box" rows="10" placeholder="Cole seu texto para zapear aqui..."></textarea>
             </section>
           </center>
     </div>
